# vim: ft=dosini
[metadata]
name = log2compdb
description = Generate compile_commands.json from a build log with compiler invocations
long_description = file: README.md
version = attr: log2compdb.__version__
url = https://github.com/Qyriad/log2compdb
author = Qyriad
author_email = qyriad@qyriad.me
license = MIT
license_files = LICENSE
platforms = any
keywords =
	build-tool
	build-system
	compilation-database

[options]
packages = find:

[options.entry_points]
console_scripts =
	log2compdb = log2compdb:main
